# ELTEProjectToolsTeam09

./: .gitignore  Doxyfile  LICENSE  README.md
Client/: README.md  pom.xml
Client/src/main/java/communication/: ServerHandler.java
Client/src/main/java/controller/: Controller.java  LoginController.java  MessageBoardController.java  RegisterController.java  UserBoardController.java
Client/src/main/java/controller/auth/: LoginController.java  RegisterController.java
Client/src/main/java/core/: Main.java
Client/src/main/java/model/: AuthUser.java  Message.java  Model.java  User.java  ViewConstraints.java
Client/src/main/java/view/: ListRenderer.java  LoginPanel.java  MainFrame.java  MessageBoard.java  RegisterPanel.java  UserBoard.java
Client/src/main/java/view/auth/: LoginPanel.java  RegisterPanel.java  WelcomePanel.java
Client/src/test/java/model_tests/: AuthUserTest.java  MessageTest.java  ModelTest.java  UserTest.java
Server/: .gitignore  GlobalClass.cpp  GlobalClass.h  Makefile.am  README.md  configure.ac  info.txt  main.cpp  server
Server/Dao/: Dao.cpp  Dao.h  MessageDao.cpp  MessageDao.h  UserDao.cpp  UserDao.h
Server/Database/: InstallDatabase.sql  database.sql
Server/Entity/: Entity.cpp  Entity.h  MessageEntity.cpp  MessageEntity.h  UserEntity.cpp  UserEntity.h
Server/Server/: ChatHandler.cpp  ChatHandler.h  Server.cpp  Server.h
Server/ServerTest/: GlobalClass.cc  Makefile
Server/ServerTest/Entity/: MessageEntity.cc  UserEntity.cc
