bin_PROGRAMS = server


server_SOURCES=main.cpp GlobalClass.cpp Entity/Entity.cpp Entity/UserEntity.cpp Entity/MessageEntity.cpp Dao/Dao.cpp Dao/UserDao.cpp

AM_LDFLAGS = -lmysqlcppconn 

noinst_HEADERS= GlobalClass.h Entity/Entity.h Entity/UserEntity.h Entity/MessageEntity.h Dao/Dao.h Dao/UserDao.h
