AC_INIT([server], [0.01])

AC_PREREQ([2.68])

AC_CONFIG_SRCDIR([main.cpp])

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_AUX_DIR([build-aux])


AM_INIT_AUTOMAKE([subdir-objects foreign])

AC_CONFIG_FILES([Makefile])

AC_LANG([C++])
AX_CXX_COMPILE_STDCXX_11
CXXFLAGS='-Wall -std=gnu++0x'
AC_PROG_CXX

AC_OUTPUT